--- a/css/littlelib.css
+++ b/css/littlelib.css
@@ -7,7 +7,7 @@ button,input,select,textarea { font-family: sans-serif; font-size: 100%; line-he
 code,kbd,pre,samp { font-family: monospace, monospace; font-size: 1em; }
 hr { box-sizing: content-box; height: 0; overflow: visible; }
 
-.main-menu{
+.ll-main-menu{
     width: 250px;
     position: fixed;
     top: 0;
@@ -15,19 +15,19 @@ hr { box-sizing: content-box; height: 0; overflow: visible; }
     bottom: 0;
     background-color: #222933;
 }
-.main-menu ul{
+.ll-main-menu ul{
     list-style: none;
     margin: 0;
     padding: 0;
     height: 100%;
 }
-.main-menu ul li a{
+.ll-main-menu ul li a{
     padding: 15px;
     display: block;
     text-decoration: none;
-    color: #687384;
+    color: #a0b5d7;
 }
-.main-menu ul li a:hover{
+.ll-main-menu ul li a:hover{
     color: white;
     background-color: #28313E;
 }
