--- a/css/littlelib.css
+++ b/css/littlelib.css
@@ -36,23 +36,25 @@ hr { box-sizing: content-box; height: 0; overflow: visible; }
     height: 100%;
 }
 
-.ll-main-menu .level-1 > li > a{
+/** Level 1 */
+.ll-main-menu > ul > li > a{
     padding-left: 15px;
 }
+/** Level 2 */
+.ll-main-menu > ul > li > ul > li > a{
+    padding-left: 25px;
+}
 
-.ll-main-menu .level-2, .ll-main-menu .level-3 {
+/** Level 3 */
+.ll-main-menu > ul > li > ul > li > ul > li > a{
+    padding-left: 35px;
+}
+
+.ll-main-menu > ul > li > ul, .ll-main-menu > ul > li > ul > li > ul {
     max-height: 0px;
     overflow: hidden;
     transition: max-height 0.6s ;
 }
-.ll-main-menu .level-2.open, .ll-main-menu .level-3.open{
+.ll-main-menu > ul > li > ul.open, .ll-main-menu > ul > li > ul > li > ul.open{
     max-height: 1000px;
-}
-
-.ll-main-menu .level-2 > li > a{
-    padding-left: 25px;
-}
-
-.ll-main-menu .level-3 > li > a{
-    padding-left: 35px;
 }
