--- a/css/littlelib.css
+++ b/css/littlelib.css
@@ -1,11 +1,4 @@
-/** Normalization */
-body { margin: 0; }
-article,aside,footer,header,nav,section { display: block; }
-h1 { font-size: 1.8em; margin: 0.65em 0; }
-audio,video,canvas { display: inline-block; }
-button,input,select,textarea { font-family: sans-serif; font-size: 100%; line-height: 1.15; margin: 0; }
-code,kbd,pre,samp { font-family: monospace, monospace; font-size: 1em; }
-hr { box-sizing: content-box; height: 0; overflow: visible; }
+* { font-family: sans-serif; } 
 
 .ll-main-menu{
     width: 250px;
@@ -13,7 +6,7 @@ hr { box-sizing: content-box; height: 0; overflow: visible; }
     top: 0;
     left: 0;
     bottom: 0;
-    background-color: #222933;
+    background-color: #ECECEC;
     overflow-y: auto;
 }
 
@@ -23,26 +16,34 @@ hr { box-sizing: content-box; height: 0; overflow: visible; }
     color: #a0b5d7;
     cursor: pointer;
     padding: 10px 0px;
+    outline: 0;
+    font-size: 13px;
+    color: #707070;
+    font-weight: bold;
+    margin: 4px;
+    position: relative;
 }
 
 .ll-main-menu a:hover{
-    color: white;
+    background-color: #DADADA;
+    border-radius: 4px;
+
 }
 
 .ll-main-menu ul{
     list-style: none;
     margin: 0;
-    padding: 0;
-    height: 100%;
+    padding: 0px; 
+    box-sizing: border-box;
 }
 
 /** Level 1 */
 .ll-main-menu > ul > li > a{
-    padding-left: 15px;
+    padding-left: 22px;
 }
 /** Level 2 */
 .ll-main-menu > ul > li > ul > li > a{
-    padding-left: 25px;
+    padding-left: 22px;
 }
 
 /** Level 3 */
@@ -50,11 +51,32 @@ hr { box-sizing: content-box; height: 0; overflow: visible; }
     padding-left: 35px;
 }
 
-.ll-main-menu > ul > li > ul, .ll-main-menu > ul > li > ul > li > ul {
-    max-height: 0px;
-    overflow: hidden;
-    transition: max-height 0.6s ;
+.ll-main-menu > ul > li > ul{
+    padding-left: 20px;
 }
-.ll-main-menu > ul > li > ul.open, .ll-main-menu > ul > li > ul > li > ul.open{
-    max-height: 1000px;
+
+.ll-main-menu > ul > li > ul, 
+.ll-main-menu > ul > li > ul > li > ul {
+    display: none;
+}
+.ll-main-menu > ul > li > ul.open, 
+.ll-main-menu > ul > li > ul > li > ul.open{
+    display: block;
+}
+
+.icon-plus::after{
+    content: "+";
+    font-weight: bold;
+    font-size: 16px;
+    position: absolute;
+    left: 2px;
+    top: 8px;
+}
+.icon-minus::after{
+    content: "-";
+    font-weight: bold;
+    font-size: 16px;
+    position: absolute;
+    left: 4px;
+    top: 8px;
 }
