add array options

--- a/css/littlelib.css
+++ b/css/littlelib.css
@@ -23,7 +23,7 @@
     width: 100%;
     box-sizing: border-box;
     border: 1px solid #cbcbcb;
-    padding: 3px;
+    padding: 4px 6px;
     color: #636363;
     background: #fcfcfc;
     height: 30px;
